--- a/styles.css
+++ b/styles.css
@@ -93,10 +93,34 @@ h1,h2,h3,a{
   }
 }
 
-
-.active {
-  background-color: #466EC3;
+.blink-1 {
+	-webkit-animation: blink-1 3.5s both infinite ease-in-out;
+	        animation: blink-1 3.5s both infinite ease-in-out;
 }
+
+ @-webkit-keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+
 
 
   /* Estilos personalizados para la barra de scroll */
@@ -115,6 +139,10 @@ h1,h2,h3,a{
   ::-webkit-scrollbar-thumb {
     background-color: rgba(70, 110, 195, .7); 
     border-radius: 10px; 
+  }
+
+  #contactImg {
+    background-image: url("./img/lofi-lg.png");
   }
 
 
